BR-038: Fix getFirst() -> get(0) for Java 17 compat